--- a/style.css
+++ b/style.css
@@ -55,14 +55,14 @@ img{
   display: grid;
   grid-template-columns: repeat(2,1fr);
   margin: 0 100px;
-  background: #f7f7f7;
-  align-items: center;
+  max-height: 1000px;
 }
 .box{
   display: grid;
   gap: 5px;
   padding: 20px;
   gap: 20px;
+  background: white;
 }
 .subtitulo{
   text-align: end;
@@ -80,4 +80,21 @@ img{
   width: 100px;
   height: 5px;
   background-color: red;
+}
+.box2{
+    display: grid;
+    gap: 5px;
+    justify-items: center;
+}
+.texto{
+  font-size: 64px;
+  text-align: right;
+  font-weight: bold;
+  color: #c6c6c6;
+}
+.box3{
+  display: grid;
+  flex-direction: column;
+  background: white;
+  gap: 10px;
 }
