--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ img{
 }
 .grid{
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: 1fr 1fr;
   margin: 0 100px;
   max-height: 1000px;
 }
@@ -83,18 +83,32 @@ img{
 }
 .box2{
     display: grid;
-    gap: 5px;
-    justify-items: center;
+    align-items: center;
 }
 .texto{
   font-size: 64px;
   text-align: right;
   font-weight: bold;
   color: #c6c6c6;
+  margin-right: 20px;
 }
 .box3{
   display: grid;
-  flex-direction: column;
+  gap: 5px;
+  padding: 20px;
+  gap: 20px;
   background: white;
-  gap: 10px;
+}
+.info{
+  display: flex;
+  align-items: center;
+  gap: 10qpx;
+}
+span{
+  font-size: 20px;
+  font-weight: bold;
+  margin-left: 10px;
+}
+p{
+  margin-left: 35px ;
 }
