--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ Conteúdo principal: maximo 1000px*/
 }
 body{
   font-family: Arial, Helvetica, sans-serif;
-  background: #e9e9e9;
+  background: #f7f7f7;
 }
 h1{
   text-align: center;
@@ -34,7 +34,7 @@ h1{
 }
 .menu a{
   text-decoration: none;
-  background-color: #f7f7f7;
+  background-color: #fff;
   color: black;
   padding: 15px 20px;
   border-radius: 4px;
