--- a/style.css
+++ b/style.css
@@ -26,15 +26,15 @@ body{
   gap: 60px;
   margin-top: 60px;
 }
-img{
+.foto{
   width: 100%;
   display: block;
 }
 p{
   font-size: 20px;
   line-height: 1.3;
+  font-weight: 600;
 }
-
 .menu {
   display: flex;
   gap: 20px;
@@ -53,16 +53,31 @@ p{
 .conteudo{
   display: grid;
   grid-template-columns: 1fr 1fr;
+  max-width: 1000px;
 }
 .introducao{
   text-align: right;
   background-color: #fff;
+  padding: 40px;
+  justify-items: end;
+  position: relative;
+  display: grid;
+  align-content: center;
+  gap: 20px;
+}
+.detalhe{
+  width: 60px;
+  height: 4px;
+  background-color: #e21;
+  position: absolute;
+  top: 30px;
+  right: -30px;
 }
 .botao{
   text-decoration: none;
-  background-color: red;
-  justify-self: center;
-  text-align: center;
+  background-color: #e21;
   text-transform: uppercase;
   color: #fff;
+  padding: 15px 30px;
+  border-radius: 4px;
 }
