--- a/style.css
+++ b/style.css
@@ -12,23 +12,25 @@ Vantagens Bikecraft: 64px
 #Tamanhos
 Conteúdo principal: maximo 1000px*/
 
-*{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
 body{
   display: grid;
   justify-items: center;
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
   background: #f7f7f7;
   padding: 80px;
   gap: 60px;
   margin-top: 60px;
 }
-.foto{
-  width: 100%;
+img{
+  max-width: 100%;
   display: block;
+}
+a{
+  text-decoration: none;
+}
+p, h1,h2,h3 {
+  margin: 0px;
 }
 p{
   font-size: 20px;
@@ -45,9 +47,7 @@ p{
   padding: 15px 30px;
   border-radius: 4px;
   color: #000;
-  text-decoration: none;
   text-transform: uppercase;
-  font-weight: 600;
 }
 .conteudo{
   display: grid;
@@ -58,10 +58,10 @@ p{
   text-align: right;
   background-color: #fff;
   padding: 40px;
-  justify-items: end;
   position: relative;
   display: grid;
   align-content: center;
+  justify-items: end;
   gap: 20px;
 }
 .detalhe{
@@ -73,10 +73,21 @@ p{
   right: -30px;
 }
 .botao{
-  text-decoration: none;
   background-color: #e21;
   text-transform: uppercase;
   color: #fff;
   padding: 15px 30px;
   border-radius: 4px;
+}
+
+.subtitulo{ 
+  text-transform: uppercase;
+  color: rgba(0, 0, 0, 0.2);
+  font-size: 64px;
+  text-align: right;
+  padding: 40px;
+  align-self: center;
+}
+.vantagens{
+  background-color: #fff;
 }
