--- a/style.css
+++ b/style.css
@@ -1,17 +1,3 @@
-/* #Cores
-cinza: #f7f7f7
-cinza-escruto: #c6c6c6
-vermelho: #ee2211
-
-#Tipografia
-
-fonte: Arial
-parágrafo: 20px
-Vantagens Bikecraft: 64px
-
-#Tamanhos
-Conteúdo principal: maximo 1000px*/
-
 body{
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
@@ -47,6 +33,7 @@ p{
   border-radius: 4px;
   color: #000;
   text-transform: uppercase;
+  font-weight: 600;
 }
 .conteudo{
   display: grid;
