--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@ body{
   justify-items: center;
   margin-top: 60px;
 }
+figure{
+  margin: 0;
+  padding: 0;
+ }
 img{
   max-width: 100%;
   display: block;
