--- a/style.css
+++ b/style.css
@@ -72,6 +72,13 @@ p{
   text-decoration: none;
   box-shadow: 0.31rem 0.31rem 0.62rem 0.004rem #00000070;
 }
+.background{
+  background-image: url(./img/wave.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center top;
+  display: flex;
+}
 .subtitulo{ 
   text-transform: uppercase;
   color: rgba(0, 0, 0, 0.2);
@@ -79,6 +86,7 @@ p{
   text-align: right;
   padding: 2.5rem;
   align-self: center;
+  position: relative;
 }
 .vantagens{
   background-color: #fff;
