--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ p{
   font-size: 1.25rem;
   line-height: 1.3;
 }
+
 .menu {
   display: flex;
   gap: 1.25rem;
@@ -39,6 +40,10 @@ p{
   text-transform: uppercase;
   font-weight: 600;
   text-decoration: none;
+  border: 4px solid rgba(0, 0, 0, 0.0);
+}
+nav a:hover{
+  border: 4px solid  #e21;
 }
 .conteudo{ /*caixa principal do GRID*/
   display: grid;
@@ -70,7 +75,10 @@ p{
   padding: 0.93rem 1.87rem;
   border-radius: 0.25rem;
   text-decoration: none;
-  box-shadow: 0.31rem 0.31rem 0.62rem 0.004rem #00000070;
+  font-weight: 700;
+}
+.botao:hover{
+  background-color:#900;
 }
 .background{
   background-image: url(./img/wave.svg);
