--- a/style.css
+++ b/style.css
@@ -25,7 +25,11 @@ p{
   font-size: 1.25rem;
   line-height: 1.3;
 }
-
+ul{
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 .menu {
   display: flex;
   gap: 1.25rem;
@@ -49,6 +53,9 @@ nav a:hover{
   display: grid;
   grid-template-columns: 1fr 1fr;
   max-width: 62.5rem;
+}
+.introducao h2{
+  font-size: 2rem;
 }
 .introducao{ /*caixa que envolve o conteudo no GRID*/
   text-align: right;
