nav ul li display inline-block

--- a/style.css
+++ b/style.css
@@ -171,6 +171,9 @@ h4 {
   section.introducao::before {
     display: none;
   }
+  nav ul li a{
+    display: inline-block;
+  }
   .subtitulo {
     text-align: center;
     padding: 5rem;
